init: cancerch-project