@@ -1,9 +1,12 @@
 plugins {
-    kotlin("jvm") version "1.7.10" apply false
-    kotlin("kapt") version "1.7.10" apply false
+    kotlin("jvm") version "1.9.23" apply false
+    kotlin("kapt") version "1.9.23" apply false
 }
 
+import org.gradle.api.plugins.JavaPluginExtension
+
 subprojects {
+    apply(plugin = "java")
     repositories {
         mavenCentral()
         mavenLocal()
@@ -13,7 +16,7 @@ subprojects {
                 password = (project.findProperty("github_password") ?: System.getenv("GITHUB_TOKEN")).toString()
             }
         }
-        maven(url = "http://gitea.apps.gcgenome.com/api/packages/LIMS/maven"){
+        maven(url = "http://172.19.216.21/api/packages/LIMS/maven"){
             isAllowInsecureProtocol = true
         }
         maven(url = "http://gemini/api/packages/LIMS/maven"){
@@ -22,4 +25,26 @@ subprojects {
     }
     group = "com.gcgenome"
     version = "1.0"
+
+    configure<org.gradle.api.plugins.JavaPluginExtension> {
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(21))
+        }
+    }
+
+    tasks.withType<JavaCompile>().configureEach {
+        options.compilerArgs.addAll(listOf(
+            "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED"
+        ))
+    }
 }
